[package]
name = "polymarket-arbitrage"
version = "2.0.0"
edition = "2021"
description = "Polymarket arbitrage bot - binary and multi-outcome market arbitrage with paper trading"
keywords = ["polymarket", "arbitrage", "trading-bot", "prediction-markets", "crypto"]
authors = ["teraus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/terauss/polymarket-arbitrage"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["legacy"] }
futures-util = "0.3"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustc-hash = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
